# coffee-and-lead-matching-project

./: coffee_quality_prediction.ipynb  coffee_quality_prediction_old.ipynb  lead_matching.ipynb  pyproject.toml
data/: Dataset for data scientist assessment - Lead.csv  harvest_period.json  region_lat_lon.json
