[tool.poetry]
name = "coffee-quality-prediction"
version = "0.1.0"
description = ""
authors = ["mook <mookfan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
numpy = "^2.2.3"
plotly = "^6.0.0"
nbformat = "^5.10.4"
langdetect = "^1.0.9"
scikit-learn = "^1.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
