[tool.poetry]
name = "coffee-quality-prediction"
version = "0.1.0"
description = ""
authors = ["mook <mookfan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
numpy = "^2.2.3"
plotly = "^6.0.0"
nbformat = "^5.10.4"
langdetect = "^1.0.9"
scikit-learn = "^1.6.1"
pythainlp = "^5.1.0"
jellyfish = "^1.1.3"
matplotlib = "^3.10.1"
fuzzywuzzy = "^0.18.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
